# DiceRandomGenerator

./: CMakeLists.txt  README.md
src/: dicerandomgenerator.cpp  dicerandomgenerator.h  main.cpp  mersenne.cpp  mersenne.h
